--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -40,9 +40,114 @@
 
   
     <section class="main2">
+<div class="pub-div">
+  <h1 class="year">
+      2023
 
-
+    </h1>
+<h2 class="pub-title">
+      TZAP overexpression induces telomere dysfunction and ALT-like activity in ATRX/DAXX-deficient cells.</h2>
       
+      Sara Priego Moreno, Javier Miralles Fuste, Melanie Kaiser, Julia Su Zhou Li, Joe Nassour, Candy Haggblom, Eros Lazzerini Denchi, and Jan Karlseder.
+      
+      iScience 2023.
+      
+       
+      <h2 class="pub-title"> 
+      Telomere-to-mitochondria signalling by ZBP1 mediates replicative crisis.</h2>
+      
+      Nassour J, Aguiar LG, Correia A, Schmidt TT, Mainz L, Przetocka S, Haggblom C, Tadepalle N, Williams A, Shokhirev MN, Akincilar SC, Tergaonkar V, Shadel GS, Karlseder J.
+      
+      Nature 2023. PMID: 36755096.
+      
+       
+      <h1 class="year">
+      2022
+      </h1>
+       
+      <h2 class="pub-title">
+      Selective pericentromeric heterochromatin dismantling caused by TP53 activation during senescence.</h2>
+      
+      Mendez-Bermudez A, Lototska L, Pousse M, Tessier F, Croce O, Latrick CM, Cherdyntseva V, Nassour J, Xiaohua J, Lu Y, Abbadie C, Gagos S, Ye J, Gilson E.
+      
+      Nucleic Acids Res. 2022. PMID: 35819196.
+      
+       
+      <h2 class="pub-title">
+      The out-of-field dose in radiation therapy induces delayed tumorigenesis by senescence evasion.</h2>
+      
+      Goy E, Tomezak M, Facchin C, Martin N, Bouchaert E, Benoit J, de Schutter C, Nassour J, Saas L, Drullion C, Brodin PM, Vandeputte A, Molendi-Coste O, Pineau L, Goormachtigh G, Pluquet O, Pourtier A, Cleri F, Lartigau E, Penel N, Abbadie C.
+      
+      Elife 2022. PMID: 35302491.
+      
+       
+      <h1 class="year">
+      2021
+      </h1>
+       
+      <h2 class="pub-title">
+      Telomeres and Cancer: Resolving the Paradox. </h2>
+      
+      Nassour J, Schmidt TT, Karlseder J.
+      
+      Annu Rev Cancer Biol. 2021. PMID: 34532611.
+      
+       
+      <h1 class="year">
+      2019
+      
+      </h1>
+      <h2 class="pub-title">
+      Autophagic cell death restricts chromosomal instability during replicative crisis.</h2>
+      
+      Nassour J, Radford R, Correia A, Fusté JM, Schoell B, Jauch A, Shaw RJ, Karlseder J.
+      
+      Nature 2019. PMID: 30675059.
+      
+      <h1 class="year">
+      
+      2013 - 2018
+      </h1>
+      
+      <h2 class="pub-title">
+      HIC1 (hypermethylated in cancer 1) SUMOylation is dispensable for DNA repair but is essential for the apoptotic DNA damage response (DDR) to irreparable DNA double-strand breaks (DSBs). </h2>
+      
+      Paget S, Dubuissez M, Dehennaut V, Nassour J, Harmon BT, Spruyt N, Loison I, Abbadie C, Rood BR, Leprince D.
+      
+      Oncotarget 2017. PMID: 27935866.
+      
+      <h2 class="pub-title">
+      
+      A novel role for DNA single-strand breaks in senescence and neoplastic escape of epithelial cells.</h2>
+      
+      Nassour J, Abbadie C.
+      
+      Mol Cell Oncol. 2016. PMID: 27857969.
+      
+       
+      <h2 class="pub-title">
+      Defective DNA single-strand break repair is responsible for senescence and neoplastic escape of epithelial cells.</h2>
+      
+      Nassour J, Martien S, Martin N, Deruy E, Tomellini E, Malaquin N, Bouali F, Sabatier L, Wernert N, Pinte S, Gilson E, Pourtier A, Pluquet O, Abbadie C.
+      
+      Nat Commun. 2016. PMID: 26822533.
+      
+       
+      <h2 class="pub-title">
+      Level of macroautophagy drives senescent keratinocytes into cell death or neoplastic evasion.</h2>
+      
+      Deruy E, Nassour J, Martin N, Vercamer C, Malaquin N, Bertout J, Chelli F, Pourtier A, Pluquet O, Abbadie C.
+      
+      Cell Death Dis. 2014. PMID: 25522271.
+      
+       
+      <h2 class="pub-title">
+      DNA double-strand breaks lead to activation of hypermethylated in cancer 1 (HIC1) by SUMOylation to regulate DNA repair.</h2>
+      
+      Dehennaut V, Loison I, Dubuissez M, Nassour J, Abbadie C, Leprince D.
+      
+      J Biol Chem. 2013. PMID: 23417673.
+</div>
     </section>
     <%- include('./partials/footer') %>
   </div>
