--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,7 +21,7 @@
     <div class="main-contact">
       <section class="main">
         <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
-        <nav class="head_navbar">
+        <nav class="head_navbar_contact">
           <a href="/home">Home</a>
           <a href="/team">Team</a>
           <a href="/research">Research</a>
@@ -30,6 +30,7 @@
           <a class="mainlink" href="/contact">Contact</a>
         </nav>
         <div class="contact-title"><h1 class="contact-h1">CONTACT</h1></div>
+        
       </section>
     </div>
     
@@ -41,7 +42,7 @@
           <div class="contact-info">
             
             <h1>Contact Us.</h1>
-            <p class="contact-1">We're affiliated with the University of Colorado School of Medicine and our lab is situated at the Anschutz Medical Campus.</p>
+            <p class="contact-1">We are affiliated with the University of Colorado School of Medicine and our lab is situated at the Anschutz Medical Campus.</p>
        
            <p class="name">Joe Nassour - Head of Lab</p>
            <p  class="name2">jnassour@salk.edu</p>
