--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -103,6 +104,7 @@
         </li>
     
       </ul>
+
       <p class="about3">
         We strive to create a supportive, diverse, and inclusive laboratory
         environment with exceptional training and career development
@@ -110,9 +112,9 @@
         website and contact us for discussions, collaborations, or career
         opportunities.
       </p>
-      <h2 class="fund-title">SUPPORT</h2>
+  
       <div class="fund-div">
-        <img class="fund1" src="https://i.imgur.com/365a1bq.png" />
+        <img class="fund1" src="https://i.imgur.com/dWzGA25.png" />
        
       
       </div>
