--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,27 +1,25 @@
 <div id="contact">
+  <div class="copy">
+    <p >&copy 2023 NASSOUR LAB</p>
+  </div>
   <div class="logos">
-
-
+  
+  
 
       <a class="footer"
       onclick="window.open ('https://www.cuanschutz.edu', ''); return false"
       href="javascript:void(0);"
       >  
-      <img class="loc" src="https://i.imgur.com/k7z8DFi.png"
+      <img class="loc" src="https://i.imgur.com/fIm59YZ.png"
     /></a>
 
 
-      <a class="footer"
-      onclick="window.open ('https://www.youtube.com/@CUAnschutz', ''); return false"
-      href="javascript:void(0);"
-      >  
-      <img class="youtube" src="https://i.imgur.com/zuDYUOp.png"
-    /></a>
+   
 
 
 
     <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
-      ><img class="mail" src="https://i.imgur.com/IVKJ0cU.png"
+      ><img class="mail" src="https://i.imgur.com/phFNC6K.png"
     /></a>
 
 
@@ -29,7 +27,7 @@
     onclick="window.open ('https://twitter.com/NassourJoe', ''); return false"
     href="javascript:void(0);"
     >  
-      <img class="twitter" src="https://i.imgur.com/3YvJmHM.png" alt=""
+      <img class="twitter" src="https://i.imgur.com/m4hx1JB.png" alt=""
     /></a>
   </div>
 </div>
