--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -168,9 +168,10 @@
       <h2 class="pub-title">
       Level of macroautophagy drives senescent keratinocytes into cell death or neoplastic evasion.</h2>
       </a>
-      Deruy E, Nassour J, Martin N, Vercamer C, Malaquin N, Bertout J, Chelli F, Pourtier A, Pluquet O, Abbadie C.
+      Deruy E*, Nassour J*, Martin N, Vercamer C, Malaquin N, Bertout J, Chelli F, Pourtier A, Pluquet O, Abbadie C.
       
       Cell Death Dis. 2014. PMID: 25522271.
+    </br> *Equal Contribution
       
       <a class="pub-click"
       onclick="window.open ('https://www.jbc.org/article/S0021-9258(20)67251-9/fulltext', ''); return false"
