--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -41,11 +41,10 @@
           <img class = "help" src="https://i.imgur.com/nDcWIHW.jpg"/>
           <div class="contact-info">
             
-            <h1>Contact Us.</h1>
+            <h1>Reach Out.</h1>
             <p class="contact-1">We are affiliated with the University of Colorado School of Medicine and our lab is situated at the Anschutz Medical Campus.</p>
+       <p class="contact-1">We are currently recruiting postdoctoral fellows, graduate students and research assistants. If you are interested in joining our team, please send us an email at jnassour@salk.edu</p>
        
-           <p class="name">Joe Nassour - Head of Lab</p>
-           <p  class="name2">jnassour@salk.edu</p>
 
           
            <div class="map" style="-webkit-filter: grayscale(100%);
