--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,7 +19,7 @@
 
 
     <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
-      ><img class="mail" src="https://i.imgur.com/phFNC6K.png"
+      ><img class="mail" src="https://i.imgur.com/Q9nJfCq.png"
     /></a>
 
 
