--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -27,7 +27,7 @@
           <a href="/research">Research</a>
           <a href="/publications">Publications</a>
           <a href="/philosophy">Philosophy</a>
-          <a class="mainlink" href="/contact">Contact</a>
+          <a id="mainlink" href="/contact">Contact</a>
         </nav>
         <div class="contact-title"><h1 class="contact-h1">CONTACT</h1></div>
         
