--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,10 +7,10 @@
   
 
       <a class="footer"
-      onclick="window.open ('https://www.cuanschutz.edu', ''); return false"
+      onclick="window.open ('https://www.youtube.com/@CUAnschutz', ''); return false"
       href="javascript:void(0);"
       >  
-      <img class="loc" src="https://i.imgur.com/fIm59YZ.png"
+      <img class="loc" src="https://i.imgur.com/eHwpyEj.png"
     /></a>
 
 
@@ -19,7 +19,7 @@
 
 
     <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
-      ><img class="mail" src="https://i.imgur.com/Q9nJfCq.png"
+      ><img class="mail" src="https://i.imgur.com/kArmtgH.png"
     /></a>
 
 
@@ -27,7 +27,7 @@
     onclick="window.open ('https://twitter.com/NassourJoe', ''); return false"
     href="javascript:void(0);"
     >  
-      <img class="twitter" src="https://i.imgur.com/m4hx1JB.png" alt=""
+      <img class="twitter" src="https://i.imgur.com/alOmrGh.png" alt=""
     /></a>
   </div>
 </div>
