--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-video {
+.research-video,  .team-video, .video1 {
   position: absolute;
   z-index: -1;
   top: 0;
@@ -10,6 +10,7 @@ video {
   opacity: 60%;
   background-color: black;
 }
+
 
 .main2 {
   background-color: #C9DCF5;
@@ -262,7 +263,11 @@ body {
 
 }
 
+.growing{
+  height:40vh;
+  width:65vh;
 
+}
 .m1-div:hover .member_pic1 {
   opacity: 60%;
 }
@@ -638,20 +643,20 @@ body {
 }
  .mail{
   margin-top:1.2em;
-  height: 2.5vh;
-  width: 3.4vh;
+  height: 4vh;
+  width: 4vh;
   filter: opacity(.5) drop-shadow(0 0 0 white)
 }
 .twitter{
   margin-top:1.2em;
-  height:3vh;
-  width:3.5vh;
+  height:4vh;
+  width:4vh;
   filter: opacity(.5) drop-shadow(0 0 0 white)
 }
 .loc{
- 
+  margin-top:1.2em;
   height:4vh;
-  width:2.5vh;
+  width:4vh;
   filter: opacity(.5) drop-shadow(0 0 0 white)
 }
 .copy{
@@ -660,7 +665,7 @@ body {
   margin-bottom:0;
   padding-bottom:0;
   margin-left: 3vh;
-  margin-top:1vh;
+  margin-top:2.5vh;
   text-align:center;
  
  }
