--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 60%;
+  opacity: 70%;
   background-color: black;
 }
 
@@ -32,8 +32,8 @@
 
 }
 .nlab-logo{
-  width:12%;
-  height:5%;
+  width:34vh;
+  height:9vh;
   margin-top:4vh;
   margin-left:4vh;
 }
@@ -679,8 +679,15 @@ body {
   justify-content:center;
   margin-bottom:0;
   padding-bottom:0;
+  
  }
 
+.footer-chromo{
+  height:7vh;
+  width:5vh;
+  margin-right:2vh;
+  
+}
 .footer {
   padding-top: 0;
   padding-left: 0;
