--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,15 @@
 <div id="contact">
   <div class="copy">
+    <img class="footer-chromo" src="https://i.imgur.com/gIkbGM0.png" />
     <p >&copy 2023 NASSOUR LAB</p>
+   
   </div>
+ 
+  
+
   <div class="logos">
   
-  
+   
 
       <a class="footer"
       onclick="window.open ('https://www.youtube.com/@CUAnschutz', ''); return false"
