--- a/views/philosophy.ejs
+++ b/views/philosophy.ejs
@@ -92,7 +92,7 @@
         committed to supporting your personal and professional growth. Please
         know that I am invested in your success, and I will work with you to
         help you achieve your goals. I look forward to working together and
-        building a positive and productive relations
+        building a positive and productive relations.
       </p>
     </section>
     <%- include('./partials/footer') %>
