--- a/views/research.ejs
+++ b/views/research.ejs
@@ -122,19 +122,7 @@
             TELOMERE-MITOCHONDRIAL CROSSTALK AND INNATE IMMUNITY
           </h1>
           <p class="research-p" id="d3">
-            In a recent study, we discovered a novel pathway that involves the
-            innate immune sensor ZBP1 activated specifically by telomeric long
-            noncoding RNA (lncRNA) species transcribed from damaged telomeres.
-            Upon binding to telomeric lncRNAs, ZBP1 translocates to the
-            mitochondrial outer membranes to launch a lethal immune response. 
-            However, the underlying molecular mechanisms behind telomere-driven
-            innate immune response are not defined and much work needs to be
-            done to understand how telomeres are functionally linked to innate
-            immune pathways. Our lab focuses on identifying novel innate immune
-            sensing pathways that relay telomere stress to mitochondria and
-            examine whether loss of these pathways could provide cells with
-            favorable phenotypes to propagate during the stepwise process of
-            malignant progression.
+            In a recent study, we have discovered a new pathway that involves the activation of the innate immune sensor ZBP1 by the lncRNA TERRA, synthesized from damaged telomeres. Upon binding to telomeric lncRNAs, ZBP1 relocates to the mitochondrial outer membranes to initiate a deadly immune response. However, the molecular mechanisms underlying this telomere-driven innate immune response remain undefined, and more research is needed to understand how telomeres are functionally linked to innate immune pathways. Our laboratory is focused on identifying novel innate immune sensing pathways that relay telomere stress to mitochondria. Additionally, we aim to examine whether the loss of these pathways could provide cells with favorable phenotypes to propagate during the stepwise process of malignant progression.
           </p>
         </div>
 
@@ -169,20 +157,7 @@
             AUTOPHAGY AND GENOME INTEGRITY
           </h1>
           <p class="research-p" id="d3">
-            Micronuclei (MN), small nuclear structures formed by mitotic errors
-            or chromosome breakages, represent a major source of genomic
-            instability. Chromosomes contained within micronuclei are subject to
-            massive DNA fragmentation that occurs upon nuclear envelope rupture
-            and DNA exposure to the cytoplasm. The resulting DNA fragments can
-            undergo two distinct fates: (1) reassemble to form new derivative
-            chromosome containing multiple rearrangements (chromothripsis) or
-            (2) self-ligate into circular DNA structures called double minutes
-            (DMs). We previously demonstrated that dysfunctional telomeres
-            generate MN with fragile nuclear envelopes. Our research focuses on
-            the role of autophagy in the clearance of MN and the resulting
-            consequences on chromothripsis and other types of genomic
-            alterations. These studies will provide mechanistic insight into an
-            entirely new role for autophagy in genome integrity and stability.
+            Micronuclei (MN) are small nuclear structures that result from mitotic errors or chromosome breakages, and they represent a significant source of genomic instability. The chromosomes contained within micronuclei are particularly vulnerable to massive DNA fragmentation, which occurs upon nuclear envelope rupture and DNA exposure to the cytoplasm. The resulting DNA fragments can either reassemble to form new derivative chromosomes containing multiple rearrangements (chromothripsis) or self-ligate into circular DNA structures called double minutes (DMs). Our previous research has shown that dysfunctional telomeres are capable of generating MN with fragile nuclear envelopes. To further explore this phenomenon, we are now investigating the role of autophagy in the clearance of MN and the resulting consequences on chromothripsis and other types of genomic alterations. By studying these processes, we aim to provide mechanistic insights into a previously unexplored role for autophagy in maintaining genome integrity and stability.
           </p>
         </div>
 
