--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,6 +76,9 @@ nav {
   padding-bottom: 1vh;
   font-size: 1.5vh;
   border: none;
+  margin:0;
+  padding-left:0;
+  padding-right:0;
 }
 
 /* The container <div> - needed to position the dropdown content */
