--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
     </script>
 
     <section class="main2" id="home">
-      <h2 class="about-title">ABOUT US</h2>
+      <h2 class="about-title">ABOUT</h2>
       <p class="about1">
         Cancer emerges due to genetic and epigenetic changes that accumulate in
         somatic cells, allowing them to evade normal proliferation limits and
