--- a/views/philosophy.ejs
+++ b/views/philosophy.ejs
@@ -91,8 +91,7 @@
         prioritize the well-being of all members of my laboratory, and I am
         committed to supporting your personal and professional growth. Please
         know that I am invested in your success, and I will work with you to
-        help you achieve your goals. I look forward to working together and
-        building a positive and productive relations.
+        help you achieve your goals. 
       </p>
     </section>
     <%- include('./partials/footer') %>
