--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -43,14 +43,17 @@
             
             <h1>Reach Out.</h1>
             <p class="contact-1">We are affiliated with the University of Colorado School of Medicine and our lab is situated at the Anschutz Medical Campus.</p>
-       <p class="contact-1">We are currently recruiting postdoctoral fellows, graduate students and research assistants. If you are interested in joining our team, please send us an email at jnassour@salk.edu</p>
+       <p class="contact-1">We are currently recruiting postdoctoral fellows, graduate students and research assistants. If you are interested in joining our team, please send us an email at joe.nassour@cuanschutz.edu</p>
        
 
           
            <div class="map" style="-webkit-filter: grayscale(100%);
         filter: grayscale(100%);">
          <p class="name3">
-         
+          
+          Joe Nassour, PhD, Principal Investigator<br />
+          Dept. of Biochemistry and Molecular Genetics<br />
+          
           University of Colorado School of Medicine<br />
           Research Complex 1 South<br />
           12801 E 17th Ave, Aurora, CO 80045<br />
