--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,7 +23,7 @@
 
 
 
-    <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
+    <a class="footer" href="mailto: joe.nassour@cuanschutz.edu" target="_blank"
       ><img class="mail" src="https://i.imgur.com/kArmtgH.png"
     /></a>
 
