--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -17,6 +17,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    
   </head>
 <div   id="container">
   <section class="main">
@@ -52,7 +53,7 @@
 <h2 class="pub-title">
       TZAP overexpression induces telomere dysfunction and ALT-like activity in ATRX/DAXX-deficient cells.</h2>
       </a>
-      Sara Priego Moreno, Javier Miralles Fuste, Melanie Kaiser, Julia Su Zhou Li, Joe Nassour, Candy Haggblom, Eros Lazzerini Denchi, and Jan Karlseder.
+      Moreno S, Miralles Fuste J, Kaiser M, Su Zhou Li J, Nassour J, Haggblom C, Lazzerini Denchi E, and Karlseder J.
       
       iScience 2023.
       
