--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,6 +16,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content = "The Nassour Lab focuses on understanding how telomere shortening during replicative aging hinders cell proliferation and limits cancer development." />
+ 
   </head>
   <body class="contact-body">
     <div class="main-contact">
