--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
     <section class="main2" id="home">
       <h2 class="about-title">ABOUT</h2>
       <p class="about1">
-        Cancers emerges due to genetic and epigenetic changes that accumulate in
+        Cancer emerges due to genetic and epigenetic changes that accumulate in
         somatic cells, allowing them to evade normal proliferation limits and
         attain immortality. Our laboratory studies various aspects of telomere
         biology, with a specific focus on understanding how the shortening of
