--- a/views/research.ejs
+++ b/views/research.ejs
@@ -125,8 +125,7 @@
             TELOMERE-MITOCHONDRIAL CROSSTALK AND INNATE IMMUNITY
           </h1>
           <p class="research-p" id="d3">
-            In a recent study, we have discovered a new pathway that involves the activation of the innate immune sensor ZBP1 by the lncRNA TERRA, synthesized from damaged telomeres. Upon binding to telomeric lncRNAs, ZBP1 relocates to the mitochondrial outer membranes to initiate a deadly immune response. However, the molecular mechanisms underlying this telomere-driven innate immune response remain undefined, and more research is needed to understand how telomeres are functionally linked to innate immune pathways. Our laboratory is focused on identifying novel innate immune sensing pathways that relay telomere stress to mitochondria. Additionally, we aim to examine whether the loss of these pathways could provide cells with favorable phenotypes to propagate during the stepwise process of malignant progression.
-          </p>
+            Our recent study has revealed a novel pathway involving the activation of ZBP1 innate immune sensor by lncRNA TERRA, synthesized from damaged telomeres. This binding leads to ZBP1 relocating to the mitochondrial outer membranes and triggering a lethal immune response. However, we still lack a comprehensive understanding of the molecular mechanisms underlying this innate immune response and the functional relationship between telomeres and innate immune pathways. Our lab's current focus is on identifying new sensing pathways that can relay telomere stress to mitochondria. We also aim to investigate whether the loss of these pathways can result in favorable cell phenotypes during the process of malignant progression.</p>
         </div>
 
         <img class="research-image" src="https://i.imgur.com/SzI5pyt.png" />
