--- a/views/team.ejs
+++ b/views/team.ejs
@@ -64,9 +64,9 @@
             </div>
             <div class="member-container">
 
-            <h1 class="member-name">Joe Nassour</h1>
+            <h1 class="member-name">Joe Nassour, PhD</h1>
             <p class="team_desc">
-              Joe Nassour obtained his doctoral degree from the Institut Pasteur - University of Lille in France and further advanced his training by completing a postdoctoral fellowship at the Salk Institute for Biological Studies in the US.
+              Joe obtained his doctoral degree from the Institut Pasteur - University of Lille in France and further advanced his training by completing a postdoctoral fellowship at the Salk Institute for Biological Studies in the US.
                Currently, he holds the position of Assistant Professor in the Department of Biochemistry and Molecular Genetics at the University of Colorado Anschutz Medical Campus. 
             </p>
           </div>
@@ -74,7 +74,7 @@
          <div class="join-us">
         
           <img class ="growing" src="https://i.imgur.com/DyuBrxq.gif"/>
-         <h1>Join our growing team!</h1>
+         <h3>Join our growing team!</h3>
           <p>We are constantly seeking talented and enthusiastic individuals to join our team. As a part of the University of Colorado School of Medicine, our lab is situated at the Anschutz Medical Campus, providing us with access to all the resources that the University of Colorado has to offer. In addition to being at the forefront of scientific research, Colorado is a breathtaking place to live, with plenty of outdoor activities and scenic beauty to explore.
           </br>  </br>If you are passionate about research and would like to explore exciting opportunities, we encourage you to reach out to us with your CV and a brief overview of your research interests.</p>
         </div>
