--- a/views/team.ejs
+++ b/views/team.ejs
@@ -12,10 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Nassour Lab</title>
     <meta name="description" content = "The Nassour Lab focuses on understanding how telomere shortening during replicative aging hinders cell proliferation and limits cancer development." />
  
   </head>
