--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,6 +15,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nassour Lab</title>
     <meta name="description" content = "The Nassour Lab focuses on understanding how telomere shortening during replicative aging hinders cell proliferation and limits cancer development." />
