--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
