--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/gIkbGM0.png">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="robots" content="noindex">
 
   </head>
   <body class="contact-body">
