--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
           <p class="philo">TELOMERE FUNCTIONS IN AGING AND CANCER</p>
         </div>
         <div id="video_motto_div" >
-          <video class="research-video" autoplay muted loop playsinline>
+          <video class="research-video" autoplay muted loop playsinline poster="placeholder.png">
             <source src="https://i.imgur.com/qazezeu.mp4" type=video/mp4>
           </video>
         </div>
