--- a/views/philosophy.ejs
+++ b/views/philosophy.ejs
@@ -43,7 +43,7 @@
       </div>
 
       <div id="video_motto_div" class="grid1">
-        <video class="research-video" autoplay muted loop>
+        <video class="research-video" autoplay muted loop poster="placeholder.png">
           <source src="https://i.imgur.com/0okHBq1.mp4" type=video/mp4>
         </video>
       </div>
