--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -34,7 +34,7 @@
 
     <div class="philo-title"><h1 class="h1-title">PUBLICATIONS</h1></div>
     <div id="video_motto_div" class="grid1">
-      <video class="research-video" autoplay muted loop>
+      <video class="research-video" autoplay muted loop poster="placeholder.png">
         <source src="https://i.imgur.com/oApk8Sz.mp4" type=video/mp4>
       </video>
     </div>
