--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
         <a href="/contact">Contact</a>
       </nav>
 
-      <div class="philo-title"><h1 class="h1-title">NASSOUR LAB</h1></div>
+      <div class="philo-title"><h1 class="h1-title">NASSOUR testLAB</h1></div>
   
         <div class="philo_main">
           <p class="philo">TELOMERE FUNCTIONS IN AGING AND CANCER</p>
