--- a/views/research.ejs
+++ b/views/research.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="research-page">
+<html lang="en" id="research-screen">
   <head>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
