--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,6 +92,9 @@ a:hover {
   margin-left: 2em;
   margin-top: 1em;
 }
+
+
+
 nav {
   background-color: transparent;
   float: right;
@@ -101,8 +104,49 @@ nav {
   margin-bottom:0;
 }
 
+@media only screen and (max-width: 400px) {
+  .nlab-logo{
+    display: none;
+  }
+.head_navbar{
+  padding:0;
+
+  margin:auto;
+  margin-top: 2vh;
+  text-align: center;
+  justify-content: center; 
+}
+  .head_navbar a{
+    padding: 2vh;
+    margin-bottom: 1vh;
+    display: inline;
+    justify-content: center; 
+    text-align: center;
+  }
+
+  .dropbtn { 
+    background-color: transparent;
+    color: white;
+
+    font-size: 1.5vh;
+    border: none;
+    margin:0;
+    padding-left:0;
+    padding-right:0;
+  }
+  
+ 
+ 
+  .dropdown-content
+
+ {
+    display: none;
+  }
+  }
 /* Dropdown Button */
-.dropbtn {
+
+@media only screen and (min-width: 400px) {
+.dropbtn { 
   background-color: transparent;
   color: white;
   padding-bottom: 1vh;
@@ -151,7 +195,7 @@ nav {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
+}
 
 @keyframes fadeIn {
   0% { opacity: 0; }
@@ -208,7 +252,17 @@ body {
   margin-left: 10em;
   margin-right: 10em;
   margin-bottom: 0;
-}}
+}
+.fund1 {
+  height: 45%;
+  width: 55%;
+  left: 50%;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 10vh;
+}
+
+}
 .about1 {
   padding-top: 1em;
 }
@@ -218,20 +272,25 @@ body {
   background-color: #C9DCF5;
 }
 
-.fund1 {
-  height: 45%;
-  width: 55%;
-  left: 50%;
-  justify-content: center;
-  text-align: center;
-  margin-bottom: 10vh;
-}
+
 .about-title {
   margin-top:2em;
   color: black;
   font-family: "Abel", sans-serif;
   text-align: center;
 }
+
+@media only screen and (max-width: 400px)  {
+.fund1 {
+  height: 65%;
+  width: 85%;
+  left: 50%;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 10vh;
+}
+}
+
 .fund-div {
   margin-top: 2em;
   display: flex;
@@ -240,7 +299,7 @@ body {
   background-color: #C9DCF5;
 }
 
-
+/*
 .fund-title {
   color: black;
   font-family: "Abel", sans-serif;
@@ -257,6 +316,9 @@ body {
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+*/
+
+
 
 /*****************************/
 /* team styling*/
@@ -386,16 +448,137 @@ body {
 .growing{
   filter: opacity(.5) drop-shadow(0 0 0 blue)
 }
+
+
+@media only screen and (max-width: 400px){
+  .team-pg {
+    display: grid;
+
+  }
+  .member_pic1{
+    border-radius: 0%;
+    height: 50%;
+    width: 70%;
+    margin-bottom:0;
+    margin-top:5vh;
+    display: flex;
+   justify-content: center;
+  }
+  .member1, .join-us, .growing{
+    margin:auto;
+    position: relative;
+    width: 80%;
+    
+  }
+  .growing {
+    margin-left: 5vh;
+  }
+}
 /******************************/
 /* research page style */
-
+@media only screen and (min-width: 400px) {
 #research-page {
   background-color: black;
   position: relative;
-
   display: flex;
   flex-direction: column;
+
 }
+#telomere-dynamics,
+#escaping-crisis,
+#autophagy-cell-death,
+#autophagy-gen-int,
+#telo-mito {
+  
+  background-color: #C9DCF5;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  width: 100vw;
+  height: 100%;
+
+  font-size: 1.5vw;
+  scroll-behavior: smooth;
+}
+.research-div {
+  margin: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.research-p {
+  font-family: "Abel", sans-serif;
+  color: black;
+  text-align: justify;
+  margin-right: 2em;
+}
+.res2 {
+  margin-left: 2em;
+}
+.research-image {
+  height: 25%;
+  width: 25%;
+  border-radius: 50%;
+}
+}
+
+
+@media only screen and (max-width: 400px) {
+  #research-page {
+    background-color: black;
+    position: relative;
+    display: grid;
+    flex-direction: column;
+    font-size: 10vh;
+
+  }
+  #telomere-dynamics,
+#escaping-crisis,
+#autophagy-cell-death,
+#autophagy-gen-int,
+#telo-mito {
+  
+  background-color: #C9DCF5;
+  margin-bottom: 0;
+  padding-bottom: 1vh;
+  width: 100vw;
+  height: 100%;
+
+  font-size: 5vw;
+  scroll-behavior: smooth;
+}
+.research-div{
+    border: none;
+    display: grid;
+    
+  
+}
+
+.research-p {
+  font-family: "Abel", sans-serif;
+  color: black;
+  text-align: justify;
+  margin-left: 5vh;
+  margin-right: 5vh;
+  order: 1;
+
+}
+.research-title{
+  margin-left: 5vh;
+  margin-right: auto;
+  
+ 
+}
+.research-image {
+  margin-left: 25%;
+  height: 100%;
+  width: 50%;
+  border-radius: 50%;
+  order: 2;
+
+
+}
+  }
 .nav-title {
   position: absolute;
   justify-content: center;
@@ -408,24 +591,9 @@ body {
   margin-left: 0.5em;
 }
 
-.research-div {
-  margin: 3em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.research-image {
-  height: 25%;
-  width: 25%;
-  border-radius: 50%;
-}
 
-.research-p {
-  font-family: "Abel", sans-serif;
-  color: black;
-  text-align: justify;
-  margin-right: 2em;
-}
+
+
 #res-footer {
   background-color: white;
   justify-content: center;
@@ -450,24 +618,8 @@ body {
 #res-title {
   left: 35%;
 }
-.res2 {
-  margin-left: 2em;
-}
-#telomere-dynamics,
-#escaping-crisis,
-#autophagy-cell-death,
-#autophagy-gen-int,
-#telo-mito {
-  
-  background-color: #C9DCF5;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  width: 100vw;
-  height: 100%;
 
-  font-size: 1.5vw;
-  scroll-behavior: smooth;
-}
+
 
 /*******************************/
 /*contact styling*/
@@ -609,6 +761,42 @@ body {
   }  
  
 }
+@media screen and (max-width:400px){
+ 
+  .h1-title {
+    margin-top: 20vh;
+   font-size: 6.5vh;
+  }  
+ 
+}
+
+@media screen and (max-width:400px){
+ 
+.philo-exp {
+  background-color: #C9DCF5;
+  color: black;
+  font-family: "Abel", sans-serif;
+  margin-bottom: 5vh;
+  text-align: justify;
+  line-height: 1.2em;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+  
+  font-size: 2.5vh;
+}
+
+.exp {
+  margin-top:3vh;
+  color: #6BA4F2;
+  background-color: #C9DCF5;
+  margin-left: 1em;
+  font-family: "Abel", sans-serif;
+  font-size: 3vh;
+}
+
+}
+
+
 .philo_main {
   color: #C9DCF5;
   margin:auto;
@@ -623,6 +811,8 @@ body {
   margin-top:0;
   animation: fadeIn 5s;
 }
+@media screen and (min-width:400px) {
+
 .philo-exp {
   background-color: #C9DCF5;
   color: black;
@@ -634,12 +824,14 @@ body {
   margin-right: 10em;
   margin-bottom: 0;
 }
+
 .exp {
   margin-top:10vh;
   color: #6BA4F2;
   background-color: #C9DCF5;
   margin-left: 5em;
   font-family: "Abel", sans-serif;
+}
 }
 /*****************************/
 /*publications*/
@@ -669,20 +861,15 @@ body {
 /*****************************/
 /*footer styling*/
 
+ 
 .logos {
   display: flex;
   justify-content: right;
   text-align: center;
   margin-top: 0;
-
-  border: solid;
-  border-right-color: transparent;
-  border-left-color: transparent;
 }
 
-
 .twitter,
-
 .loc,
 .mail {
  padding:10px;
@@ -710,6 +897,9 @@ body {
   width:4vh;
   filter: opacity(.5) drop-shadow(0 0 0 white)
 }
+
+
+
 .copy{
   display: flex;
   float:left;
@@ -749,11 +939,12 @@ body{
 
 #container {
   position: relative;
-
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
+@media only screen and (min-width: 400px) {
 #contact {
   background-color: #32373D;
 
@@ -761,8 +952,49 @@ body{
 
   width: 100%;
   margin-top: auto;
+  border: solid;
+  border-right-color: transparent;
+  border-left-color: transparent;
+}
 }
 
+@media only screen and (max-width: 400px) {
+  #contact {
+    background-color: #32373D;
+    display: grid;
+    font-family: "Abel", sans-serif;
+    width: 100%;
+    margin-top: auto;
+    border: solid;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    justify-content: center;
+  }
+  .copy {
+    font-size: 1em;
+    margin-top: 5em;
+    grid-area: bottom;
+    margin-bottom: 2em;
+ 
+  }
+  .copy p{
+    text-align: center;
+    justify-content:center;
+  }
+  .footer-chromo{
+    margin-top: auto;
+    height: 4vh;
+    width: 2vh;
+    margin-right:2vh;
+  }
+  .logos{
+    grid-area:top;
+    justify-content: center;
+   
+  }
+  }
+
+/*
 .cu_head {
   height: 3rem;
   width: 15rem;
@@ -783,3 +1015,4 @@ body{
   top: 0;
   left: 0;
 }
+*/
