--- a/views/research.ejs
+++ b/views/research.ejs
@@ -25,6 +25,7 @@
     <nav class="head_navbar">
       <a href="/home">Home</a>
       <a href="/team">Team</a>
+      <a class="mainlink2" href="/research">Research</a>
       <div class="dropdown">
         <button class="dropbtn">
           <a class="mainlink" href="/research">Research</a>
