--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,7 @@
   </head>
   <body class="contact-body">
     <div class="main-contact">
-      <section class="main">
+      <section class="main-help">
         <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
         <nav class="head_navbar_contact">
           <a href="/home">Home</a>
