--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -636,7 +636,7 @@ body {
   padding:0;
   background-image: url("https://i.imgur.com/wuRdS8A.png");
   background-repeat: no-repeat;
-  width: 50vh;
+  width: 100%
 }
 
 .help{
@@ -673,9 +673,9 @@ body {
   background-color: #C9DCF5;
 }
 .contact{
-  margin-right:3vh;
+  margin-right:4vh;
   margin-top: 5vh;
-  margin-left: 2vh;
+  margin-left: 4vh;
 }
 h1{
   font-size:5vh;
@@ -699,6 +699,12 @@ h1{
   display: flex;
   margin-top: 4vh;
   margin-right:0;
+}
+.contact-info {
+
+  font-family: "Abel", sans-serif;
+  display: inline-block;
+  margin-top: 20px;
 }
 }
 @media only screen and (min-width: 400px) {
@@ -781,13 +787,14 @@ h1{
     margin-top: 10vh;
     margin-right:0;
   }
+  .contact-info {
+    margin-left: 50px;
+    font-family: "Abel", sans-serif;
+    display: inline-block;
+    margin-top: 20px;
+  }
 }
-.contact-info {
-  margin-left: 50px;
-  font-family: "Abel", sans-serif;
-  display: inline-block;
-  margin-top: 20px;
-}
+
 .contact-title {
   margin:auto;
   text-align: center;
