--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,14 @@
   font-size: 1.5vw;
   scroll-behavior: smooth;
 }
+nav {
+  background-color: transparent;
+  float: right;
+  margin-top: 3em;
+  font-family: "Abel", sans-serif;
+  margin-right: 3em;
+  margin-bottom:0;
+}
 }
 .main {
   position: relative;
@@ -70,13 +78,7 @@
   margin-left:4vh;
 }
 
-a {
-  color: #C5D0D5;
-  padding: 20px;
-  font-size: 2.5vh;
-  text-decoration: none;
-  font-family: "Abel", sans-serif;
-}
+
 .head_navbar_contact a{
 color: black;
 }
@@ -95,27 +97,41 @@ a:hover {
 
 
 
-nav {
-  background-color: transparent;
-  float: right;
-  margin-top: 3em;
-  font-family: "Abel", sans-serif;
-  margin-right: 3em;
-  margin-bottom:0;
-}
+
 
 @media only screen and (max-width: 400px) {
   .nlab-logo{
     display: none;
   }
+  nav {
+    background-color: transparent;
+    float: right;
+    margin-top: 3em;
+    font-family: "Abel", sans-serif;
+    margin-right: 3em;
+  
+  }
 .head_navbar{
-  padding:0;
+
 
   margin:auto;
   margin-top: 2vh;
   text-align: center;
   justify-content: center; 
 }
+  a {
+    color: #C5D0D5;
+   padding: 2vh;
+   padding-bottom:0;
+   
+    font-size: 2.5vh;
+    text-decoration: none;
+    font-family: "Abel", sans-serif;
+    display: inline-block;
+   
+  }
+ 
+/*
   .head_navbar a{
     padding: 2vh;
     margin-bottom: 1.5vh;
@@ -123,7 +139,7 @@ nav {
     justify-content: center; 
     text-align: center;
   }
-
+*/
   .dropbtn { 
     display:none;
   }
@@ -141,6 +157,13 @@ nav {
 @media only screen and (min-width: 400px) {
   .mainlink2{
     display: none;
+  }
+  a {
+    color: #C5D0D5;
+    padding: 20px;
+    font-size: 2.5vh;
+    text-decoration: none;
+    font-family: "Abel", sans-serif;
   }
 .dropbtn { 
   background-color: transparent;
@@ -708,6 +731,7 @@ h1{
 }
 }
 @media only screen and (min-width: 400px) {
+
   .main2-contact{
     background-color: #C9DCF5;
     padding-bottom: 3em;;
