--- a/views/research.ejs
+++ b/views/research.ejs
@@ -69,7 +69,7 @@
   </div> 
    <div id="video_motto_div" class="grid1">
       <div class="video-repeat">
-        <video class="video1" autoplay muted loop poster="placeholder.png">
+        <video class="video1" autoplay muted loop poster="placeholder.png" controls="false">
           <source src="https://i.imgur.com/fw1b7AW.mp4" type=video/mp4>
         </video>
       </div>
